--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://light_beam.tscn", "res://Mobs/mob.tscn")
-current_scene="res://Mobs/mob.tscn"
+current_scene="res://main.tscn"
 center_split_offset=0
 open_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://light_beam.tscn", "res://Mobs/mob.tscn")
 selected_bottom_panel_item=0
