--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,7 +13,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
-dock_hsplit_3=-356
+dock_hsplit_3=-216
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://light_beam.tscn", "res://Mobs/mob.tscn")
-current_scene="res://main.tscn"
+current_scene="res://Mobs/mob.tscn"
 center_split_offset=0
 open_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://light_beam.tscn", "res://Mobs/mob.tscn")
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://LightBeam.gd", "res://Player/sola.gd"]
-selected_script="res://LightBeam.gd"
+open_scripts=["res://LightBeam.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
+selected_script="res://Mobs/mob.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
