--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://light_beam.tscn", "res://Mobs/mob.tscn")
-current_scene="res://Mobs/mob.tscn"
+current_scene="res://main.tscn"
 center_split_offset=0
 open_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://light_beam.tscn", "res://Mobs/mob.tscn")
 selected_bottom_panel_item=9
@@ -37,8 +37,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://LightBeam.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://Mobs/mob.gd"
+open_scripts=["res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
+selected_script="res://main.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
