--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,14 +31,14 @@ dock_5="Inspector,Node,History"
 current_scene="res://main.tscn"
 center_split_offset=0
 open_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://light_beam.tscn", "res://Mobs/mob.tscn")
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
 open_scripts=["res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://main.gd"
+selected_script="res://Mobs/mob.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
