--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/Mac/Speedway Survival.dmg"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Mac/Speedway Survival.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -111,7 +111,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/Windows/Speedway Survival.exe"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Windows/Speedway Survival.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -173,7 +173,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/Web/Speedway Survival.html"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Web/Speedway Survival.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
