--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://hud.tscn", "res://Player/sola.tscn", "res:/
 center_split_offset=-872
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-current_scene="res://main.tscn"
-selected_bottom_panel_item=11
+current_scene="res://hud.tscn"
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
 open_scripts=["res://hud.gd", "res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://main.gd"
+selected_script="res://hud.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
