Light Drift Added

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -30,14 +30,13 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://light_beam.tscn", "res://temp_bg.tscn", "res://main.tscn")
 center_split_offset=-872
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-current_scene="res://hud.tscn"
-selected_bottom_panel_item=11
+selected_main_editor_idx=2
+current_scene="res://Player/sola.tscn"
 
 [ScriptEditor]
 
 open_scripts=["res://hud.gd", "res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://hud.gd"
+selected_script="res://Player/sola.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
