--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,6 +32,7 @@ center_split_offset=-872
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 current_scene="res://Player/sola.tscn"
+selected_bottom_panel_item=11
 
 [ScriptEditor]
 
