--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Lamp.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Lamp_Light.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Music/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -30,14 +30,14 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://light_beam.tscn", "res://temp_bg.tscn", "res://main.tscn", "res://Lamp.tscn")
 center_split_offset=-572
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-current_scene="res://main.tscn"
-selected_bottom_panel_item=11
+selected_main_editor_idx=2
+current_scene="res://Lamp.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://hud.gd", "res://Lamp.gd", "res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://main.gd"
+selected_script="res://Lamp.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
