mob update actual

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,33 +12,34 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-432
+dock_hsplit_2=270
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Lamp_Light.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Music/")
+dock_filesystem_selected_paths=PackedStringArray("res://Mobs/Shadow_Sprite_4.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://light_beam.tscn", "res://temp_bg.tscn", "res://main.tscn", "res://Lamp.tscn")
-center_split_offset=-572
+open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn")
+center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-current_scene="res://main.tscn"
+selected_main_editor_idx=2
+current_scene="res://Mobs/mob.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://hud.gd", "res://Lamp.gd", "res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://main.gd"
+open_scripts=["res://hud.gd", "res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
+selected_script="res://Mobs/mob.gd"
 open_help=[]
-script_split_offset=140
+script_split_offset=70
 list_split_offset=0
 
 [ShaderEditor]
