mob2 scene + node created. not implemented

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -10,4 +10,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Mobs/mob.gd"
+}, {
+"base": &"RigidBody2D",
+"class": &"Mob2",
+"icon": "",
+"language": &"GDScript",
+"path": "res://mob2.gd"
 }])
