--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Mobs/Shadow_Sprite_4.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Mobs/shadow2_sprite3.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn")
+open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-current_scene="res://Mobs/mob.tscn"
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+current_scene="res://mob2.tscn"
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://hud.gd", "res://LightBeam.gd", "res://main.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://Mobs/mob.gd"
+open_scripts=["res://hud.gd", "res://LightBeam.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
+selected_script="res://mob2.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
