--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -30,8 +30,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 current_scene="res://main.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
