--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 0.0,
+"row": 61,
+"scroll_position": 46.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 0.0,
+"row": 64,
+"scroll_position": 53.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -34,13 +34,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 9,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 23,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
