--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,21 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-<<<<<<< Updated upstream
-dock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
-=======
-dock_filesystem_selected_paths=PackedStringArray("res://Art/")
+<<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/", "res://Art/")
->>>>>>> Stashed changes
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
+dock_filesystem_selected_paths=PackedStringArray("res://Art/")
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
+selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://main.tscn"
-selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -52,13 +48,3 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=true
-log_filter_3=true
-log_filter_4=true
-collapse=false
-show_search=true
