--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,19 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-<<<<<<< Updated upstream
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 61,
-"scroll_position": 46.0,
-=======
 "column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 34,
 "scroll_position": 33.25,
->>>>>>> Stashed changes
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -25,19 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-<<<<<<< Updated upstream
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 64,
-"scroll_position": 53.0,
-=======
 "column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 62,
 "scroll_position": 59.0,
->>>>>>> Stashed changes
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -50,9 +34,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 0,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
