Lamps flickering added

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -20,15 +20,15 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/", "res://Art/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
+dock_filesystem_selected_paths=PackedStringArray("res://Lamp.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
-dock_filesystem_selected_paths=PackedStringArray("res://Art/")
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn")
+open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn", "res://Lamp.tscn")
 current_scene="res://main.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
@@ -37,7 +37,7 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://hud.gd", "res://LightBeam.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
+open_scripts=["res://hud.gd", "res://Lamp.gd", "res://LightBeam.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
 selected_script="res://main.gd"
 open_help=[]
 script_split_offset=70
