--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn", "res://Lamp.tscn")
-current_scene="res://Player/sola.tscn"
+current_scene="res://Mobs/mob.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -38,7 +38,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://hud.gd", "res://Lamp.gd", "res://LightBeam.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-selected_script="res://Player/sola.gd"
+selected_script="res://Mobs/mob.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
