--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,51 +12,36 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=682
-dock_hsplit_3=-270
+dock_hsplit_2=540
+dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
-dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-<<<<<<< HEAD
-open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
-current_scene="res://mob2.tscn"
-=======
-open_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn", "res://Lamp.tscn")
-current_scene="res://Player/sola.tscn"
-<<<<<<< HEAD
->>>>>>> parent of f44fe15 (Edit)
-=======
->>>>>>> parent of f44fe15 (Edit)
+<<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
+current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn")
 center_split_offset=0
-selected_bottom_panel_item=1
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://hud.gd", "res://Lamp.gd", "res://LightBeam.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://Player/sola.gd"]
-<<<<<<< HEAD
-<<<<<<< HEAD
-selected_script="res://mob2.gd"
-=======
-selected_script="res://Player/sola.gd"
->>>>>>> parent of f44fe15 (Edit)
-=======
-selected_script="res://Player/sola.gd"
->>>>>>> parent of f44fe15 (Edit)
+open_scripts=["res://main.gd"]
+selected_script="res://main.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=140
 list_split_offset=0
 
 [ShaderEditor]
