Moving on to next level

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([]),
+"column": 15,
+"folded_lines": Array[int]([53]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 55.0,
+"row": 30,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 5,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 38,
-"scroll_position": 43.0,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,12 +59,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 19,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 11,
+"selection_to_column": 49,
+"selection_to_line": 19,
 "syntax_highlighter": "GDScript"
 }
 
@@ -73,11 +77,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 70,
-"scroll_position": 62.0,
+"row": 71,
+"scroll_position": 65.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,10 +91,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
+"column": 15,
+"folded_lines": Array[int]([30, 33, 39]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -101,15 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 1.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 11,
-"selection_to_column": 56,
-"selection_to_line": 12,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
