--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -21,7 +21,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Art/")
-dock_filesystem_selected_paths=PackedStringArray("res://Art/Health Bar (0).png")
+dock_filesystem_selected_paths=PackedStringArray("res://Art/fence.png")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,8 +29,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
-current_scene="res://next_level.tscn"
-open_scenes=PackedStringArray("res://main.tscn", "res://Player/sola.tscn", "res://next_level.tscn", "res://mob2.tscn", "res://hud.tscn", "res://Lamp.tscn", "res://Mobs/mob.tscn", "res://level_2.tscn")
+current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://next_level.tscn", "res://Lamp.tscn", "res://mob2.tscn", "res://Mobs/mob.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -39,7 +39,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://next_level.gd", "res://Player/sola.gd"]
-selected_script="res://next_level.gd"
+selected_script="res://main.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
