Collision Layer Fixing

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": false,
+"row": 55,
+"scroll_position": 48.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 55,
+"selection_to_column": 18,
+"selection_to_line": 55,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 49,
-"scroll_position": 10.0,
+"row": 66,
+"scroll_position": 57.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
-"scroll_position": 0.0,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
