--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
-dock_filesystem_selected_paths=PackedStringArray("res://Mobs/Shadow_Sprite_Death5.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Mobs/shadow2_sprite_death6.png")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,17 +29,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
-current_scene="res://Mobs/mob.tscn"
+current_scene="res://mob2.tscn"
 open_scenes=PackedStringArray("res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn", "res://Lamp.tscn", "res://tutorial.tscn", "res://title.tscn")
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://hud.gd", "res://Lamp.gd", "res://LightBeam.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://Player/sola.gd", "res://tutorial.gd"]
-selected_script="res://Mobs/mob.gd"
+selected_script="res://mob2.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
