mob 1 death animation + mob death sounds

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
-dock_filesystem_selected_paths=PackedStringArray("res://Mobs/shadow2_sprite_death6.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Mobs/mob1 death sound.mp3")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
