--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 87,
-"scroll_position": 71.25,
+"row": 85,
+"scroll_position": 71.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 3.0,
+"row": 35,
+"scroll_position": 19.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -76,9 +76,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 12.0,
-"selection": false,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 14,
+"selection_to_line": 40,
 "syntax_highlighter": "GDScript"
 }
 
