From title to tutorial
Able to transition to tutorial through title.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,16 +12,16 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=362
-dock_hsplit_3=-216
+dock_hsplit_2=540
+dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Mobs/")
-dock_filesystem_selected_paths=PackedStringArray("res://Mobs/mob1 death sound.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/")
+dock_filesystem_selected_paths=PackedStringArray("res://tutorial.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,24 +29,20 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
-<<<<<<< Updated upstream
-current_scene="res://Mobs/mob.tscn"
-open_scenes=PackedStringArray("res://hud.tscn", "res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn", "res://Lamp.tscn", "res://tutorial.tscn", "res://title.tscn")
-=======
-current_scene="res://title.tscn"
-open_scenes=PackedStringArray("res://Player/sola.tscn", "res://Mobs/mob.tscn", "res://mob2.tscn", "res://main.tscn", "res://Lamp.tscn", "res://tutorial.tscn", "res://title.tscn", "res://hud.tscn")
->>>>>>> Stashed changes
+<<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://mob2.tscn", "res://hud.tscn", "res://next_level.tscn", "res://title.tscn", "res://tutorial.tscn")
+current_scene="res://tutorial.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://hud.gd", "res://Lamp.gd", "res://LightBeam.gd", "res://main.gd", "res://mob2.gd", "res://Mobs/mob.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd"]
-selected_script="res://title.gd"
+open_scripts=["res://hud.gd", "res://main.gd", "res://mob2.gd", "res://next_level.gd", "res://title.gd", "res://tutorial.gd"]
+selected_script="res://tutorial.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=140
 list_split_offset=0
 
 [ShaderEditor]
