--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
-"folded_lines": Array[int]([50]),
+"column": 37,
+"folded_lines": Array[int]([50, 63]),
 "h_scroll_position": 0,
 "row": 104,
-"scroll_position": 114.0,
+"scroll_position": 68.75,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -53,7 +53,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 5.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 3,
 "selection_from_line": 15,
@@ -99,7 +99,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 70,
-"scroll_position": 65.0,
+"scroll_position": 48.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -173,7 +173,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 19,
-"scroll_position": 14.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
