--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
-"folded_lines": Array[int]([51, 64]),
+"column": 53,
+"folded_lines": Array[int]([49]),
 "h_scroll_position": 0,
-"row": 161,
-"scroll_position": 118.75,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 160,
-"selection_to_column": 54,
-"selection_to_line": 161,
+"row": 86,
+"scroll_position": 20.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -71,12 +67,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 8,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 7,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 6,
+"selection_from_line": 7,
+"selection_to_column": 8,
+"selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
 
@@ -99,11 +99,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 73,
-"scroll_position": 67.0,
+"row": 60,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -131,7 +131,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 10,
-"scroll_position": 0.0,
+"scroll_position": 10.0,
 "selection": true,
 "selection_from_column": 1,
 "selection_from_line": 10,
@@ -145,12 +145,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 53,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 42,
-"scroll_position": 15.0,
-"selection": false,
+"row": 73,
+"scroll_position": 71.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 73,
+"selection_to_column": 53,
+"selection_to_line": 73,
 "syntax_highlighter": "GDScript"
 }
 
@@ -173,11 +177,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 4.0,
+"row": 1,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
