Perfectly working map

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,15 +13,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=572
-dock_hsplit_3=-540
+dock_hsplit_3=-432
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
-dock_filesystem_selected_paths=PackedStringArray("res://mob2.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Music/")
+dock_filesystem_selected_paths=PackedStringArray("res://Music/Clear.mp3")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,8 +30,8 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://tutorial.tscn", "res://Player/sola.tscn", "res://hud.tscn", "res://Lamp.tscn", "res://mob.tscn", "res://mob2.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://tutorial.tscn", "res://hud.tscn", "res://Lamp.tscn", "res://Player/sola.tscn", "res://mob.tscn", "res://mob2.tscn", "res://next_level.tscn", "res://win.tscn")
+current_scene="res://win.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -40,7 +40,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://gameover.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://main.gd", "res://mob2.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://main.gd"
+selected_script="res://win.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
