mob2 movement temporary

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 14,
 "folded_lines": Array[int]([58]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 11.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 45,
-"selection_to_column": 54,
-"selection_to_line": 46,
+"row": 81,
+"scroll_position": 69.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 86,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 6.0,
+"row": 6,
+"scroll_position": 7.5,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -169,15 +165,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
-"scroll_position": 33.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 62,
-"selection_to_column": 0,
-"selection_to_line": 63,
+"row": 20,
+"scroll_position": 5.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
