--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -4,10 +4,10 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 12,
-"folded_lines": Array[int]([52]),
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 48,
-"scroll_position": 0.0,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 6.0,
-"selection": false,
+"row": 61,
+"scroll_position": 39.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 62,
+"selection_to_column": 35,
+"selection_to_line": 63,
 "syntax_highlighter": "GDScript"
 }
 
@@ -81,7 +85,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
@@ -95,7 +99,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 51,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 92,
@@ -165,11 +169,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 1.0,
+"row": 24,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
