mob3 in progress

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -20,13 +20,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 61,
-"scroll_position": 39.0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 0,
-"selection_from_line": 62,
-"selection_to_column": 35,
-"selection_to_line": 63,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 71,
 "syntax_highlighter": "GDScript"
 }
 
@@ -173,7 +173,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
-"scroll_position": 0.0,
+"scroll_position": 3.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -187,6 +187,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 35,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://mob3.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 70,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
