--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -16,4 +16,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://mob2.gd"
+}, {
+"base": &"RigidBody2D",
+"class": &"Mob3",
+"icon": "",
+"language": &"GDScript",
+"path": "res://mob3.gd"
 }])
