Music and tutorial changed

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,16 +12,16 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=420
-dock_hsplit_3=-322
+dock_hsplit_2=712
+dock_hsplit_3=-432
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<Updatedupstreamdock_filesystem_selected_paths=PackedStringArray("res://main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Art/")
-dock_filesystem_selected_paths=PackedStringArray("res://Art/Charge 0.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Music/")
+dock_filesystem_selected_paths=PackedStringArray("res://level_3.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,7 +30,7 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<HEADopen_scenes=PackedStringArray("res://light_beam.tscn", "res://hud.tscn", "res://Player/sola.tscn", "res://mob2.tscn", "res://Lamp.tscn")
 <<<<<<<Updatedupstreamcurrent_scene="res://Mobs/mob.tscn"
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://Player/sola.tscn", "res://win.tscn", "res://gameover.tscn", "res://Lamp.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn", "res://hud.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://tutorial.tscn", "res://mob3.tscn", "res://level_3.tscn")
 current_scene="res://level_3.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
