--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,6 +6,12 @@ list=Array[Dictionary]([{
 "path": "res://LightBeam.gd"
 }, {
 "base": &"RigidBody2D",
+"class": &"Luna",
+"icon": "",
+"language": &"GDScript",
+"path": "res://luna.gd"
+}, {
+"base": &"RigidBody2D",
 "class": &"Mob",
 "icon": "",
 "language": &"GDScript",
