--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,25 +20,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Art/Speedway.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://Art/")
+dock_filesystem_selected_paths=PackedStringArray("res://dialogue.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Art/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn", "res://luna.tscn", "res://hud.tscn", "res://global.tscn", "res://Player/sola.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://level_2.tscn", "res://level_3.tscn", "res://mob.tscn", "res://mob2.tscn", "res://mob3.tscn", "res://luna.tscn", "res://hud.tscn", "res://global.tscn", "res://Player/sola.tscn", "res://win.tscn", "res://tutorial.tscn", "res://dialogue.tscn", "res://title.tscn")
+current_scene="res://dialogue.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://gameover.gd", "res://Global.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://luna.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
-selected_script="res://main.gd"
+open_scripts=["res://dialogue.gd", "res://gameover.gd", "res://Global.gd", "res://hud.gd", "res://Lamp.gd", "res://level_2.gd", "res://level_3.gd", "res://luna.gd", "res://main.gd", "res://mob2.gd", "res://mob3.gd", "res://mob.gd", "res://next_level.gd", "res://Player/sola.gd", "res://title.gd", "res://tutorial.gd", "res://win.gd"]
+selected_script="res://dialogue.gd"
 open_help=["Node"]
 script_split_offset=140
 list_split_offset=0
