--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SpeedwaySurvival/Exports/Mac/BloodyLonghorns_SpeedwaySurvival_Final.dmg"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Mac/SpeedwaySurvival_1.1.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -111,7 +111,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SpeedwaySurvival/Exports/Windows/BloodyLonghorns_SpeedwaySurvival_Final.exe"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Windows/SpeedwaySurvival_1.1.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
