--- a/.godot/export_credentials.cfg
+++ b/.godot/export_credentials.cfg
@@ -7,8 +7,8 @@ script_encryption_key=""
 codesign/certificate_file=""
 codesign/certificate_password=""
 codesign/provisioning_profile=""
-notarization/apple_id_name=""
-notarization/apple_id_password=""
+notarization/apple_id_name="sunchan.kweon@utexas.edu"
+notarization/apple_id_password="Scnumber1!"
 notarization/api_uuid=""
 notarization/api_key=""
 notarization/api_key_id=""
