--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SpeedwaySurvival/Exports/Mac/SpeedwaySurvival_v1.4.dmg"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Mac/SpeedwaySurvival_Debug_Mac.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -31,6 +31,7 @@ application/version="1.0"
 application/copyright=""
 application/copyright_localized={}
 application/min_macos_version="10.12"
+application/export_angle=0
 display/high_res=true
 xcode/platform_build="14C18"
 xcode/sdk_version="13.1"
@@ -64,6 +65,7 @@ codesign/entitlements/app_sandbox/files_downloads=0
 codesign/entitlements/app_sandbox/files_pictures=0
 codesign/entitlements/app_sandbox/files_music=0
 codesign/entitlements/app_sandbox/files_movies=0
+codesign/entitlements/app_sandbox/files_user_selected=0
 codesign/entitlements/app_sandbox/helper_executables=[]
 codesign/custom_options=PackedStringArray()
 notarization/notarization=0
@@ -111,7 +113,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SpeedwaySurvival/Exports/Windows/SpeedwaySurvival_v1.4.exe"
+export_path="../../../Desktop/SpeedwaySurvival/Exports/Windows/SpeedwaySurvival_Debug_Windows.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -145,6 +147,7 @@ application/product_name=""
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+application/export_angle=0
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
 ssh_remote_deploy/port="22"
